# chess_engine

./: CMakeLists.txt
assets/: source.txt
includes/board/: board.hxx  piece.hxx  square.hxx
includes/engine/: piece_moves.hxx
includes/gui/: background.hxx  click_event.hxx  draw.hxx  raii_wrapper.hxx  texture_cache.hxx
includes/piece/: piece.hxx
includes/square/: square.hxx
src/: CMakeLists.txt  main.cxx
src/engine/: CMakeLists.txt  piece_moves.cxx
src/gui/: CMakeLists.txt  click_event.cxx  draw.cxx
test/: board_init.hxx
